JSW Devsb/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACKING__c</fullName>
        <label>PACKING</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <label>Pack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Plant__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Grade__c</columns>
        <columns>Group__c</columns>
        <columns>PACKING__c</columns>
        <columns>Pack_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>